# atlas

./: .gitignore  CMakeLists.txt  README.md
config/: args_table.config  atlas.config
scripts/: build.sh  clean.sh
src/: main.cpp  startup.cpp  startup.h
src/controller/: CMakeLists.txt  controller.cpp  controller.h  filter.h  mapper.h  odometry_filter.h  sensor_filter.h
src/controller/core/filter/: filter.h
src/controller/core/odometry_filter/: odometry_filter.h
src/controller/core/sensor_filter/: sensor_filter.h
src/model/: CMakeLists.txt  data_processor.cpp  data_processor.h  data_source.cpp  data_source.h  data_storage.cpp  data_storage.h  model.cpp  model.h
src/plugins/controllers/: CMakeLists.txt  controllers_list.h
src/plugins/controllers/mono_image_controller/: CMakeLists.txt  mono_image_controller_headers.h  mono_image_filter.cpp  mono_image_filter.h  mono_image_mapper.cpp  mono_image_mapper.h  mono_image_odometry_filter.cpp  mono_image_odometry_filter.h
src/plugins/controllers/mono_image_controller/mono_image_filter/: mono_image_filter.cpp  mono_image_filter.h
src/plugins/controllers/mono_image_controller/mono_image_odometry_filter/: mono_image_odometry_filter.cpp  mono_image_odometry_filter.h
src/plugins/controllers/mono_image_controller/mono_image_sensor_filter/: mono_image_sensor_filter.cpp  mono_image_sensor_filter.h
src/plugins/models/: CMakeLists.txt  models_list.h
src/plugins/models/mono_image_model/: CMakeLists.txt  mono_image_data_processor.cpp  mono_image_data_processor.h  mono_image_data_source.cpp  mono_image_data_source.h  mono_image_model.cpp  mono_image_model.h  mono_image_model_headers.h
src/plugins/models/mono_image_model/mono_image_data_processor/: mono_image_data_processor.cpp  mono_image_data_processor.h
src/plugins/models/mono_image_model/mono_image_data_source/: mono_image_data_source.cpp  mono_image_data_source.h
src/plugins/models/mono_image_model/mono_image_data_structures/: mono_image_calibration_data.cpp  mono_image_calibration_data.h  mono_image_position_data.cpp  mono_image_position_data.h  mono_image_processed_odometry_data.cpp  mono_image_processed_odometry_data.h  mono_image_raw_odometry_data.cpp  mono_image_raw_odometry_data.h  mono_image_visualization_data.cpp  mono_image_visualization_data.h
src/plugins/views/: CMakeLists.txt  views_list.h
src/plugins/views/atlas_ui_view/: atlas_ui_view.cpp  atlas_ui_view.h
src/plugins/views/atlas_ui_view/atlas_ui/: CMakeLists.txt
src/plugins/views/atlas_ui_view/atlas_ui/include/: atlas_ui.h  image_widget.h
src/plugins/views/atlas_ui_view/atlas_ui/src/: atlas_ui.cpp  image_widget.cpp
src/plugins/views/atlas_ui_view/atlas_ui/ui/: atlas_ui.ui
src/services/: CMakeLists.txt
src/services/data_structures/: CMakeLists.txt  calibration_data.h  position_data.h  processed_odometry_data.h  processed_sensor_data.h  raw_odometry_data.h  raw_sensor_data.h  visualization_data.h
src/services/system/: system.cpp  system.h
src/services/utils/command_line_parser/: command_line_parser.hpp
src/services/utils/logger/: logger.hpp
src/view/: CMakeLists.txt  view.h
